Added tearDown after each test in ExamControllerTest Changed roles of user in UserTestData to `emptyList()`